[package]
authors = ["Selvakumar <selvakumar.h-s@laas.fr>"]
edition = "2018"
name = "aries_grpc"
version = "0.1.0"

[target.x86_64-apple-darwin]
rustflags = [
  "-C",
  "link-arg=-undefined",
  "-C",
  "link-arg=dynamic_lookup",
]

[target.aarch64-apple-darwin]
rustflags = [
  "-C",
  "link-arg=-undefined",
  "-C",
  "link-arg=dynamic_lookup",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
aries_collections = {path = "../../collections"}
aries_grpc_api = {path = "../api"}
aries_model = {path = "../../model"}
aries_planners = {path = "../../planners"}
aries_planning = {path = "../../planning"}
aries_solver = {path = "../../solver"}
aries_tnet = {path = "../../tnet"}
aries_utils = {path = "../../utils"}
env_param = {path = "../../env_param"}

anyhow = "1.0"
async-trait = "0.1"
fixedbitset = "0.4"
itertools = "0.10"
prost = "0.9"
pyo3 = {version = "0.16.0", features = ["extension-module"]}
regex = "1"
streaming-iterator = "0.1.5"
structopt = "0.3"
tokio = {version = "1.0", features = ["macros", "rt-multi-thread"]}
tonic = "0.6"

[build-dependencies]
tonic-build = "0.6"

[profile.release]
codegen-units = 8 
debug = true # Debug symbols for benchmarking
lto = "thin" 
opt-level = 3 
panic = "abort" 

# server binary
[[bin]]
name = "upf-server"
path = "src/server.rs"

# client binary
[[bin]]
name = "upf-client"
path = "src/client.rs"

[lib]
crate-type = ["cdylib"]
name = "aries"
path = "src/pybind.rs"
